welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var T = Array[Color] (getMondeHauteur())
                                       ^